--- a/style.css
+++ b/style.css
@@ -39,9 +39,6 @@
 
 }
 
-.track-progress.active{
-
-}
 
 .track-trigger{
     padding-inline-end:96px;
@@ -77,3 +74,50 @@
     font-size:32px;
 }
 
+
+.sticky-viewport-wrapper{
+    padding:40px;
+    height:100vh;
+    position:sticky;
+    top:0px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    
+}
+
+.card-container{
+    position:relative;
+    width:100%;
+    max-width:400px;
+    height:500px;
+    
+}
+
+.card{
+    color:#1A1110;
+    width:100%;
+    height:100%;
+    border-radius: 24px;
+    position: absolute;
+    top:0px;
+    padding:48px;
+    background-color:#E8F7EE;
+    font-size:24px;
+    display: grid;
+    place-content: center;
+    opacity:0;
+    transform:translateY(40px);
+    transition:all 400ms ease-in;
+}
+
+.card.show{
+    opacity:1;
+    transform: translateY(0px);
+}
+
+.card.fade{
+    opacity:1;
+    transform: translateY(-40px);
+}
