--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 /*---------------------------------------------------------------------------------------------------------------------------------------*/
 
+/*! wtf is causing the cards to overflow??*/
+
 .spacer{
     font-size: 32px;
     display:grid;
@@ -72,6 +74,13 @@
 
 .track-content{
     font-size:32px;
+    opacity:0.3;
+    transition:all 300ms ease;
+
+}
+
+.track-content.active{
+    opacity:1;
 }
 
 
@@ -126,13 +135,30 @@
     .sticky-scroll-container{
         display:flex;
         flex-direction: column;
+        position:relative;
     }
 
     .track-container{
+        position:sticky;
+        top:20px;
+        left:0px;
+        right:0px;
+        background-color: #1A1110;
         border-top:2px solid #3d3d3d;
         border-right:none;
         display: flex;
         justify-content: space-evenly;
+        z-index:1;
+        /* backdrop-filter: blur(20px); */
+    }
+
+    .track-container::before{
+        content:'';
+        position:absolute;
+        inset:0;
+        background-color: #1A1110;
+        top:-24px;
+
     }
 
     .track-progress{
@@ -176,10 +202,17 @@
         z-index:20;
     }
 
+    .track-trigger.active::before{
+        background: #efefef;
+        box-shadow: 0 0 0 4px rgba(250, 250, 250, 0.2);
+        transform: translateX(-50%) scale(1.5);
+    }
+
 
     .sticky-viewport-wrapper{
         flex:1;
         padding-block: 0px;
+        padding-block-start:80px;
         padding-inline:24px;
         position:static;
         height:auto;
